--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
   "dependencies": {
-    "next": "latest",
+    "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "serve": "11.2.0"
+    "prop-types": "15.7.2"
   },
   "scripts": {
     "dev": "next",
