--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "dependencies": {
     "next": "^12.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "prop-types": "15.7.2"
+    "react-dom": "^17.0.2"
   },
   "scripts": {
     "dev": "next",
